--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     
+    <!-- EmailJS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -661,6 +664,7 @@ project to Infosys leadership.
         </div>
     </footer>
 
+    <script src="js/emailjs-config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/model3d.js"></script>
     <script src="js/chatbot.js"></script>
